MvmSourceCodeMercurial/MVM_DLL/mvm_script/MvmXPathParser.cs
// $ANTLR 3.2 Sep 23, 2009 12:02:23 D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g 2010-11-12 11:09:25

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public partial class MvmXPathParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"XPATH", 
		"ABSOLUTE_PATH", 
		"RELATIVE_PATH", 
		"ROOT_PATH", 
		"PREDICATE", 
		"RECURSIVE_MATCH", 
		"TRAVERSE_UP", 
		"CURRENT_NODE", 
		"MATCH", 
		"NAME_MATCH", 
		"RECURSIVE_NAME_MATCH", 
		"PATHSEP", 
		"ABRPATH", 
		"LPAR", 
		"RPAR", 
		"LBRAC", 
		"RBRAC", 
		"MINUS", 
		"PLUS", 
		"DOT", 
		"MUL", 
		"DOTDOT", 
		"AT", 
		"COMMA", 
		"PIPE", 
		"LESS", 
		"MORE", 
		"LE", 
		"GE", 
		"COLON", 
		"CC", 
		"APOS", 
		"QUOT", 
		"AxisName", 
		"NodeType", 
		"Literal", 
		"Number", 
		"NCName", 
		"Digits", 
		"Whitespace", 
		"NCNameStartChar", 
		"NCNameChar", 
		"'/..'", 
		"'/.'", 
		"'/@'", 
		"'//@'", 
		"'processing-instruction'", 
		"'or'", 
		"'and'", 
		"'='", 
		"'!='", 
		"'div'", 
		"'mod'", 
		"'$'"
    };

    public const int NCName = 41;
    public const int APOS = 35;
    public const int ABSOLUTE_PATH = 5;
    public const int PATHSEP = 15;
    public const int DOTDOT = 25;
    public const int EOF = -1;
    public const int PREDICATE = 8;
    public const int TRAVERSE_UP = 10;
    public const int T__55 = 55;
    public const int AT = 26;
    public const int T__56 = 56;
    public const int T__57 = 57;
    public const int Literal = 39;
    public const int T__51 = 51;
    public const int T__52 = 52;
    public const int Number = 40;
    public const int T__53 = 53;
    public const int LPAR = 17;
    public const int T__54 = 54;
    public const int RECURSIVE_MATCH = 9;
    public const int Digits = 42;
    public const int COMMA = 27;
    public const int RBRAC = 20;
    public const int LESS = 29;
    public const int AxisName = 37;
    public const int RECURSIVE_NAME_MATCH = 14;
    public const int PLUS = 22;
    public const int PIPE = 28;
    public const int NodeType = 38;
    public const int DOT = 23;
    public const int Whitespace = 43;
    public const int T__50 = 50;
    public const int NCNameStartChar = 44;
    public const int GE = 32;
    public const int T__46 = 46;
    public const int NCNameChar = 45;
    public const int T__47 = 47;
    public const int T__48 = 48;
    public const int T__49 = 49;
    public const int QUOT = 36;
    public const int MATCH = 12;
    public const int ABRPATH = 16;
    public const int MINUS = 21;
    public const int MUL = 24;
    public const int LBRAC = 19;
    public const int COLON = 33;
    public const int NAME_MATCH = 13;
    public const int XPATH = 4;
    public const int MORE = 30;
    public const int CURRENT_NODE = 11;
    public const int ROOT_PATH = 7;
    public const int RELATIVE_PATH = 6;
    public const int RPAR = 18;
    public const int CC = 34;
    public const int LE = 31;

    // delegates
    // delegators



        public MvmXPathParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public MvmXPathParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return MvmXPathParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g"; }
    }


    public class main_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "main"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:80:1: main : expr -> ^( XPATH expr ) ;
    public MvmXPathParser.main_return main() // throws RecognitionException [1]
    {   
        MvmXPathParser.main_return retval = new MvmXPathParser.main_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        MvmXPathParser.expr_return expr1 = default(MvmXPathParser.expr_return);


        RewriteRuleSubtreeStream stream_expr = new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:80:7: ( expr -> ^( XPATH expr ) )
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:80:10: expr
            {
            	PushFollow(FOLLOW_expr_in_main350);
            	expr1 = expr();
            	state.followingStackPointer--;

            	stream_expr.Add(expr1.Tree);


            	// AST REWRITE
            	// elements:          expr
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	// wildcard labels: 
            	retval.Tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

            	root_0 = (object)adaptor.GetNilNode();
            	// 80:15: -> ^( XPATH expr )
            	{
            	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:80:18: ^( XPATH expr )
            	    {
            	    object root_1 = (object)adaptor.GetNilNode();
            	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(XPATH, "XPATH"), root_1);

            	    adaptor.AddChild(root_1, stream_expr.NextTree());

            	    adaptor.AddChild(root_0, root_1);
            	    }

            	}

            	retval.Tree = root_0;retval.Tree = root_0;
            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "main"

    public class locationPath_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "locationPath"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:83:1: locationPath : ( relativeLocationPath | absoluteLocationPathNoroot );
    public MvmXPathParser.locationPath_return locationPath() // throws RecognitionException [1]
    {   
        MvmXPathParser.locationPath_return retval = new MvmXPathParser.locationPath_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        MvmXPathParser.relativeLocationPath_return relativeLocationPath2 = default(MvmXPathParser.relativeLocationPath_return);

        MvmXPathParser.absoluteLocationPathNoroot_return absoluteLocationPathNoroot3 = default(MvmXPathParser.absoluteLocationPathNoroot_return);



        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:84:3: ( relativeLocationPath | absoluteLocationPathNoroot )
            int alt1 = 2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0 >= DOT && LA1_0 <= AT) || (LA1_0 >= AxisName && LA1_0 <= NodeType) || LA1_0 == NCName || LA1_0 == 50) )
            {
                alt1 = 1;
            }
            else if ( ((LA1_0 >= PATHSEP && LA1_0 <= ABRPATH) || (LA1_0 >= 46 && LA1_0 <= 49)) )
            {
                alt1 = 2;
            }
            else 
            {
                NoViableAltException nvae_d1s0 =
                    new NoViableAltException("", 1, 0, input);

                throw nvae_d1s0;
            }
            switch (alt1) 
            {
                case 1 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:84:6: relativeLocationPath
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_relativeLocationPath_in_locationPath372);
                    	relativeLocationPath2 = relativeLocationPath();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, relativeLocationPath2.Tree);

                    }
                    break;
                case 2 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:85:6: absoluteLocationPathNoroot
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_absoluteLocationPathNoroot_in_locationPath379);
                    	absoluteLocationPathNoroot3 = absoluteLocationPathNoroot();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, absoluteLocationPathNoroot3.Tree);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "locationPath"

    public class absoluteLocationPathNoroot_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "absoluteLocationPathNoroot"
    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:88:1: absoluteLocationPathNoroot : ( '/..' ( traverse )* -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* ) | '/.' ( traverse )* -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* ) | '/@' nodeTest ( traverse )* -> ^( ABSOLUTE_PATH ^( NAME_MATCH nodeTest ) ( traverse )* ) | '/' step ( traverse )* -> ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* ) | '//@' nodeTest ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_NAME_MATCH nodeTest ) ( traverse )* ) | '//' step ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* ) );
    public MvmXPathParser.absoluteLocationPathNoroot_return absoluteLocationPathNoroot() // throws RecognitionException [1]
    {   
        MvmXPathParser.absoluteLocationPathNoroot_return retval = new MvmXPathParser.absoluteLocationPathNoroot_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken string_literal4 = null;
        IToken string_literal6 = null;
        IToken string_literal8 = null;
        IToken char_literal11 = null;
        IToken string_literal14 = null;
        IToken string_literal17 = null;
        MvmXPathParser.traverse_return traverse5 = default(MvmXPathParser.traverse_return);

        MvmXPathParser.traverse_return traverse7 = default(MvmXPathParser.traverse_return);

        MvmXPathParser.nodeTest_return nodeTest9 = default(MvmXPathParser.nodeTest_return);

        MvmXPathParser.traverse_return traverse10 = default(MvmXPathParser.traverse_return);

        MvmXPathParser.step_return step12 = default(MvmXPathParser.step_return);

        MvmXPathParser.traverse_return traverse13 = default(MvmXPathParser.traverse_return);

        MvmXPathParser.nodeTest_return nodeTest15 = default(MvmXPathParser.nodeTest_return);

        MvmXPathParser.traverse_return traverse16 = default(MvmXPathParser.traverse_return);

        MvmXPathParser.step_return step18 = default(MvmXPathParser.step_return);

        MvmXPathParser.traverse_return traverse19 = default(MvmXPathParser.traverse_return);


        object string_literal4_tree=null;
        object string_literal6_tree=null;
        object string_literal8_tree=null;
        object char_literal11_tree=null;
        object string_literal14_tree=null;
        object string_literal17_tree=null;
        RewriteRuleTokenStream stream_49 = new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_48 = new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_ABRPATH = new RewriteRuleTokenStream(adaptor,"token ABRPATH");
        RewriteRuleTokenStream stream_47 = new RewriteRuleTokenStream(adaptor,"token 47");
        RewriteRuleTokenStream stream_46 = new RewriteRuleTokenStream(adaptor,"token 46");
        RewriteRuleTokenStream stream_PATHSEP = new RewriteRuleTokenStream(adaptor,"token PATHSEP");
        RewriteRuleSubtreeStream stream_nodeTest = new RewriteRuleSubtreeStream(adaptor,"rule nodeTest");
        RewriteRuleSubtreeStream stream_traverse = new RewriteRuleSubtreeStream(adaptor,"rule traverse");
        RewriteRuleSubtreeStream stream_step = new RewriteRuleSubtreeStream(adaptor,"rule step");
        try 
    	{
            // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:3: ( '/..' ( traverse )* -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* ) | '/.' ( traverse )* -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* ) | '/@' nodeTest ( traverse )* -> ^( ABSOLUTE_PATH ^( NAME_MATCH nodeTest ) ( traverse )* ) | '/' step ( traverse )* -> ^( ABSOLUTE_PATH ^( MATCH step ) ( traverse )* ) | '//@' nodeTest ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_NAME_MATCH nodeTest ) ( traverse )* ) | '//' step ( traverse )* -> ^( ABSOLUTE_PATH ^( RECURSIVE_MATCH step ) ( traverse )* ) )
            int alt8 = 6;
            switch ( input.LA(1) ) 
            {
            case 46:
            	{
                alt8 = 1;
                }
                break;
            case 47:
            	{
                alt8 = 2;
                }
                break;
            case 48:
            	{
                alt8 = 3;
                }
                break;
            case PATHSEP:
            	{
                alt8 = 4;
                }
                break;
            case 49:
            	{
                alt8 = 5;
                }
                break;
            case ABRPATH:
            	{
                alt8 = 6;
                }
                break;
            	default:
            	    NoViableAltException nvae_d8s0 =
            	        new NoViableAltException("", 8, 0, input);

            	    throw nvae_d8s0;
            }

            switch (alt8) 
            {
                case 1 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:5: '/..' ( traverse )*
                    {
                    	string_literal4=(IToken)Match(input,46,FOLLOW_46_in_absoluteLocationPathNoroot392);  
                    	stream_46.Add(string_literal4);

                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:11: ( traverse )*
                    	do 
                    	{
                    	    int alt2 = 2;
                    	    int LA2_0 = input.LA(1);

                    	    if ( ((LA2_0 >= PATHSEP && LA2_0 <= ABRPATH) || (LA2_0 >= 46 && LA2_0 <= 49)) )
                    	    {
                    	        alt2 = 1;
                    	    }


                    	    switch (alt2) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:12: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot395);
                    			    	traverse5 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse5.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop2;
                    	    }
                    	} while (true);

                    	loop2:
                    		;	// Stops C# compiler whining that label 'loop2' has no statements



                    	// AST REWRITE
                    	// elements:          traverse
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 89:23: -> ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:25: ^( ABSOLUTE_PATH ^( TRAVERSE_UP ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:41: ^( TRAVERSE_UP )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(TRAVERSE_UP, "TRAVERSE_UP"), root_2);

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:89:56: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 2 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:5: '/.' ( traverse )*
                    {
                    	string_literal6=(IToken)Match(input,47,FOLLOW_47_in_absoluteLocationPathNoroot417);  
                    	stream_47.Add(string_literal6);

                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:10: ( traverse )*
                    	do 
                    	{
                    	    int alt3 = 2;
                    	    int LA3_0 = input.LA(1);

                    	    if ( ((LA3_0 >= PATHSEP && LA3_0 <= ABRPATH) || (LA3_0 >= 46 && LA3_0 <= 49)) )
                    	    {
                    	        alt3 = 1;
                    	    }


                    	    switch (alt3) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:11: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot420);
                    			    	traverse7 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse7.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop3;
                    	    }
                    	} while (true);

                    	loop3:
                    		;	// Stops C# compiler whining that label 'loop3' has no statements



                    	// AST REWRITE
                    	// elements:          traverse
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 90:22: -> ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:24: ^( ABSOLUTE_PATH ^( CURRENT_NODE ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:40: ^( CURRENT_NODE )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(CURRENT_NODE, "CURRENT_NODE"), root_2);

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:90:56: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}

                    	retval.Tree = root_0;retval.Tree = root_0;
                    }
                    break;
                case 3 :
                    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:5: '/@' nodeTest ( traverse )*
                    {
                    	string_literal8=(IToken)Match(input,48,FOLLOW_48_in_absoluteLocationPathNoroot442);  
                    	stream_48.Add(string_literal8);

                    	PushFollow(FOLLOW_nodeTest_in_absoluteLocationPathNoroot444);
                    	nodeTest9 = nodeTest();
                    	state.followingStackPointer--;

                    	stream_nodeTest.Add(nodeTest9.Tree);
                    	// D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:19: ( traverse )*
                    	do 
                    	{
                    	    int alt4 = 2;
                    	    int LA4_0 = input.LA(1);

                    	    if ( ((LA4_0 >= PATHSEP && LA4_0 <= ABRPATH) || (LA4_0 >= 46 && LA4_0 <= 49)) )
                    	    {
                    	        alt4 = 1;
                    	    }


                    	    switch (alt4) 
                    		{
                    			case 1 :
                    			    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:20: traverse
                    			    {
                    			    	PushFollow(FOLLOW_traverse_in_absoluteLocationPathNoroot447);
                    			    	traverse10 = traverse();
                    			    	state.followingStackPointer--;

                    			    	stream_traverse.Add(traverse10.Tree);

                    			    }
                    			    break;

                    			default:
                    			    goto loop4;
                    	    }
                    	} while (true);

                    	loop4:
                    		;	// Stops C# compiler whining that label 'loop4' has no statements



                    	// AST REWRITE
                    	// elements:          traverse, nodeTest
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	// wildcard labels: 
                    	retval.Tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval", retval!=null ? retval.Tree : null);

                    	root_0 = (object)adaptor.GetNilNode();
                    	// 91:30: -> ^( ABSOLUTE_PATH ^( NAME_MATCH nodeTest ) ( traverse )* )
                    	{
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:33: ^( ABSOLUTE_PATH ^( NAME_MATCH nodeTest ) ( traverse )* )
                    	    {
                    	    object root_1 = (object)adaptor.GetNilNode();
                    	    root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(ABSOLUTE_PATH, "ABSOLUTE_PATH"), root_1);

                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:49: ^( NAME_MATCH nodeTest )
                    	    {
                    	    object root_2 = (object)adaptor.GetNilNode();
                    	    root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(NAME_MATCH, "NAME_MATCH"), root_2);

                    	    adaptor.AddChild(root_2, stream_nodeTest.NextTree());

                    	    adaptor.AddChild(root_1, root_2);
                    	    }
                    	    // D:\\MetraTech\\SourceCode\\MvmSourceCode\\MVM_DLL\\mvm_script\\MvmXPath.g:91:72: ( traverse )*
                    	    while ( stream_traverse.HasNext() )
                    	    {
                    	        adaptor.AddChild(root_1, stream_traverse.NextTree());

                    	    }
                    	    stream_traverse.Reset();

                    	    adaptor.AddChild(root_0, root_1);
                    	    }

                    	}
